small openapi changes, db optimisations. tests fail
