# axum/src/models/flashcards.rs
@@ -5,7 +5,7 @@ use sqlx::prelude::FromRow;
 use crate::models::datetime_serialization;
 
 #[derive(Deserialize)]
-pub struct DeckFilterParams {
+pub struct DeckPaginationParams {
     pub search: Option<String>,
     pub assignee: Option<String>,
 }
@@ -67,6 +67,7 @@ pub struct DeckFull {
     pub assignee: Option<String>,
     pub is_subscribed: Option<bool>,
     pub created_by: String,
+    pub card_count: i64,
 
     #[serde(with = "datetime_serialization")]
     pub created_at: DateTime<Utc>,
@@ -81,6 +82,7 @@ pub struct DeckSmall {
     pub is_subscribed: Option<bool>,
     pub seen: Option<bool>,
     pub visibility: String,
+    pub card_count: i64,
     pub description: Option<String>,
 }
 
